bk_ida/gccida/c2/find_reg_fusage
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/find_reg_fusage/src/rtlanal.c:2313:33: error: must use 'enum' tag to refer to type 'rtx_code'
int  find_reg_fusage( rtx insn, rtx_code code, rtx datum) 
                                ^
                                enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/find_reg_fusage/src/rtlanal.c:2338:34: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v8 = rtuint + ( ( unsigned int)( mode_class_0[( unsigned __int8)v7] - 5) < 2) + 1; 
                                 ^~~~~~~~~~~~
                                 mode_class
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/find_reg_fusage/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/find_reg_fusage/src/rtlanal.c:2368:21: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
for ( i = ( __int64)insn[4]; i; i = *( _QWORD *)( i + 16) ) 
                    ^~~~~~~
3 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/find_reg_fusage/src/obj/rtlanal.o] Error 1
